# ViVAE

./: README.md  example_cytometry.ipynb  example_r.Rmd  example_r.html  example_scrnaseq.ipynb  pyproject.toml  setup.py
ViVAE/: __init__.py  diagnostics.py  geometry.py  knn.py  losses.py  model.py  network.py  plotting.py
case_studies/: case_study_reed.ipynb  case_study_samusik.ipynb
examples/: case_study_farrell.ipynb  case_study_reed.ipynb  case_study_samusik.ipynb
src/vivae/: __init__.py  diagnostics.py  geometry.py  knn.py  losses.py  model.py  mps.py  network.py  plotting.py
tests/: tests.py
tutorials/: cosine.ipynb  example_cytometry.ipynb  example_r.Rmd  example_scrnaseq.ipynb  imitation.ipynb
