[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
name = "ViVAE"
version = "0.0.1"
description = "Single-cell dimensionality reduction toolkit"
readme = "README.md"
requires-python = ">=3.11.7"
license = { file = "LICENSE" }
authors = [
    { name = "David Novak", email = "davidnovak9000@gmail.com" },
    { name = "Cyril de Bodt", email = "cyril.debodt@uclouvain.be" },
    { name = "Pierre Lambert", email = "pierre.h.lambert@uclouvain.be" },
    { name = "John Aldo Lee", email = "john.lee@uclouvain.be" },
    { name = "Sofie Van Gassen", email = "Sofie.VanGassen@UGent.be" },
    { name = "Sofie Van Gassen", email = "Yvan.Saeys@UGent.be" },
]
maintainers = [
    { name = "David Novak", email = "davidnovak9000@gmail.com" },
]
urls.Documentation = "https://github.com/saeyslab/ViVAE"
urls.Source = "https://github.com/saeyslab/ViVAE"
urls.Home-page = "https://github.com/saeyslab/ViVAE"
dependencies = [
    "numpy==1.26.3",
    "numba==0.59.0",
    "pandas==2.2.0",
    "matplotlib==3.8.2",
    "scipy==1.12.0",
    "pynndescent==0.5.11",
    "scikit-learn==1.4.0",
    "scanpy==1.9.8",
    "pytorch==2.1.2",
    "flowsom@git+https://github.com/saeyslab/FlowSOM_Python",
]

[project.optional-dependencies]
analysis = [
    "ipykernel",
    "ipython"
]